# veritas

./: .dockerignore  .gitignore  README.md  docker-compose.yml  ngrok.yml  package-lock.json  package.json  render.yaml  vercel.json
.github/workflows/: ci.yml  deploy.yml
contracts/: Cargo.toml
contracts/governance_token/: Cargo.toml
contracts/governance_token/src/: lib.rs
contracts/identity_anchor/: Cargo.toml
contracts/identity_anchor/src/: lib.rs
contracts/staking/: Cargo.toml
contracts/staking/src/: lib.rs
contracts/tally_contract/: Cargo.toml
contracts/tally_contract/src/: lib.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs
contracts/vote_circuit/: Cargo.toml
contracts/vote_circuit/src/: lib.rs
contracts/voting_registry/: Cargo.toml
contracts/voting_registry/src/: lib.rs
frontend/: index.html  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json
frontend/src/: App.tsx  index.css
scripts/: expose-backend.ps1  expose-backend.sh  init-db.sql
services/api-gateway/: Dockerfile  package.json
services/election-service/: Dockerfile  package.json  tsconfig.json
services/identity-service/: Dockerfile  package.json  tsconfig.json
services/stellar-service/: Dockerfile  package.json  tsconfig.json
services/tally-service/: Dockerfile  package.json
services/zk-proof-service/: Dockerfile  package.json
shared/constants/: index.ts  package.json  tsconfig.json
shared/stellar/: anchors.ts  assets.ts  defi.ts  index.ts  package.json  payments.ts  ramp.ts  tsconfig.json
(+51 files in other folders)
